[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Textures/energy_empty.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/energy_progress.png" type="Texture" id=2]
[ext_resource path="res://Main/GUI/GameTheme.tres" type="Theme" id=3]
[ext_resource path="res://Main/GUI/AltitudeLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/GUI/HUD.gd" type="Script" id=5]
[ext_resource path="res://Main/GUI/DistanceLabel.tscn" type="PackedScene" id=6]

[node name="HUD" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="."]
margin_right = 950.0
margin_bottom = 590.0
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "$0"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 539.0
margin_right = 950.0
margin_bottom = 590.0
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 950.0
margin_bottom = 51.0

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_right = 393.0
margin_bottom = 51.0
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="AltitudeLabel" parent="MarginContainer/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 397.0
margin_right = 790.0
margin_bottom = 51.0
size_flags_horizontal = 3
script = null

[node name="DistanceLabel" parent="MarginContainer/HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 794.0
margin_right = 950.0
margin_bottom = 51.0
size_flags_horizontal = 9
script = null
